added info to the report

--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -4,14 +4,23 @@
 	date = {2018-11-18},
 	publisher = {Universitat Oberta de Catalunya},
 	url = {https://materials.campus.uoc.edu/daisy/Materials/PID_00256970/pdf/PID_00256970.pdf},
-	urldate = {2022-02-28},
+	urldate = {2022-04-01},
 }
 
 @book{tip2,
-	author = {Ryan {Mitchell},
+	author = {Ryan {Mitchell}},
 	title = {Web scraping with Python},
-	date = {2018-11-18},
+	date = {2015-07},
 	publisher = {O'Reilly},
-	url = {https://materials.campus.uoc.edu/daisy/Materials/PID_00256970/pdf/PID_00256970.pdf},
-	urldate = {2022-02-28},
+	url = {https://www.oreilly.com/library/view/web-scraping-with/9781491985564/},
+	urldate = {2022-04-01},
+}
+
+@book{tip3,
+	author = {Richard {Lawson}},
+	title = {Web scraping with Python},
+	date = {2015-10},
+	publisher = {Packt Publishing},
+	url = {https://www.packtpub.com/product/web-scraping-with-python/9781782164364},
+	urldate = {2022-04-01},
 }
