--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -147,21 +147,22 @@
 \maketitle
 \thispagestyle{uoc}
 
-\section*{Información básica del \textit{dataset}}
-
+\vspace{-2em}
 \begin{framed}
 	\begin{multicols}{2}
 		\begin{itemize}[topsep=0cm,partopsep=0cm,label={},wide]
 			\item \textbf{Título}: título
 			\item \textbf{Licencia}: licencia
-			\item \textbf{Fecha de extracción}: fecha
+			\item \textbf{DOI}:
 			\columnbreak
 			\item \textbf{Número de campos}: numero
 			\item \textbf{Número de registros}: numero
-			\item \hfill
+			\item \textbf{Fecha de extracción}: fecha
 		\end{itemize}
 	\end{multicols}
 \end{framed}
+
+\vspace{-2em}
 
 \section*{Contexto}
 
