--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -24,3 +24,11 @@
 	url = {https://www.packtpub.com/product/web-scraping-with-python/9781782164364},
 	urldate = {2022-04-01},
 }
+
+@online{block1,
+	author={Oren Spiegel},
+	url={https://medium.com/analytics-vidhya/the-art-of-not-getting-blocked-how-i-used-selenium-python-to-scrape-facebook-and-tiktok-fd6b31dbe85f},
+	title={The Art of Not Getting Blocked: How I used Selenium and Python to Scrape Facebook, and Tiktok},
+	date={2019-11-12},
+	urldate={2022-04-01},
+}
