--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -1,4 +1,13 @@
 @book{tip1,
+	author = {Jaime {{Buelta}}},
+	title = {Web scraping},
+	date = {2018-09},
+	publisher = {Packt Publishing},
+	url = {https://learning.oreilly.com/library/view/python-automation-cookbook/9781789133806/},
+	urldate = {2022-03-29},
+}
+
+@book{tip2,
 	author = {Laia {{Subirats Maté}}},
 	title = {Web scraping},
 	date = {2018-11-18},
@@ -7,7 +16,7 @@
 	urldate = {2022-04-01},
 }
 
-@book{tip2,
+@book{tip3,
 	author = {Ryan {Mitchell}},
 	title = {Web scraping with Python},
 	date = {2015-07},
@@ -16,7 +25,7 @@
 	urldate = {2022-04-01},
 }
 
-@book{tip3,
+@book{tip4,
 	author = {Richard {Lawson}},
 	title = {Web scraping with Python},
 	date = {2015-10},
@@ -31,4 +40,12 @@
 	title={The Art of Not Getting Blocked: How I used Selenium and Python to Scrape Facebook, and Tiktok},
 	date={2019-11-12},
 	urldate={2022-04-01},
+}
+
+@online{block2,
+	author={Stacy Creasey},
+	url={https://binarydefense.com/mimicking-human-activity-using-selenium-and-python/},
+	title={Mimicking Human Activity Using Selenium And Python},
+	date={2021-08-25},
+	urldate={2022-03-31},
 }
