Update with bold letters

--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -35,7 +35,7 @@
 }
 
 @online{block1,
-	author={Oren Spiegel},
+	author={Oren {Spiegel}},
 	url={https://medium.com/analytics-vidhya/the-art-of-not-getting-blocked-how-i-used-selenium-python-to-scrape-facebook-and-tiktok-fd6b31dbe85f},
 	title={The Art of Not Getting Blocked: How I used Selenium and Python to Scrape Facebook, and Tiktok},
 	date={2019-11-12},
@@ -43,7 +43,7 @@
 }
 
 @online{block2,
-	author={Stacy Creasey},
+	author={Stacy {Creasey}},
 	url={https://binarydefense.com/mimicking-human-activity-using-selenium-and-python/},
 	title={Mimicking Human Activity Using Selenium And Python},
 	date={2021-08-25},
