Ideas for context

--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -166,6 +166,8 @@
 
 \section*{Contexto}
 
+Mercado inmobiliario, nueva legislación, contexto inflación...
+
 \section*{Inspiración}
 
 \section*{Agradecimientos}
