changed contribution data

--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -220,14 +220,12 @@ dataset visualmente y el proyecto elegido
 		\hline
 		\textbf{Contribuciones} &
 		\textbf{Firma} \\ \hline
-		\begin{tabular}{l}\underline{Investigación previa} \\ \hspace{1em}\textit{Brainstorm} de ideas \\ \hspace{1em}Filtro de distritos\end{tabular} &
-		\begin{tabular}[c]{@{}c@{}}AGV, PLT\\ AGV, PLT\\ AGV\end{tabular} \\ \hline
-		\begin{tabular}{l}\underline{Desarrollo de código}\\ \hspace{1em}Estructura del código\\ \hspace{1em}\textit{Scraper} Fotocasa\\ \hspace{1em}\textit{Scraper} Idealista\\ \hspace{1em}Unión de \textit{datasets}\\ \hspace{1em}Representación gráfica\end{tabular} &
-		\begin{tabular}[c]{@{}c@{}}AGV, PLT\\ PLT\\ AGV\\ PLT\\ AGV\end{tabular} \\ \hline
-		\begin{tabular}{l}\underline{Redacción de las respuestas}\\ Creación del vídeo\end{tabular} &
-		\begin{tabular}[c]{@{}c@{}}AGV, PLT\\ AGV, PLT\end{tabular} \\ \hline
-		\begin{tabular}{l}Documentación\\ \hspace{1em}Documentación del código\\ \hspace{1em}Documentación del repositorio\end{tabular} &
-		\begin{tabular}[c]{@{}c@{}}AGV, PLT\\ AGV, PLT\\ PLT\end{tabular} \\ \hline
+		\begin{tabular}{l}Investigación previa\end{tabular} &
+		\begin{tabular}[c]{@{}c@{}}AGV, PLT\end{tabular} \\ \hline
+		\begin{tabular}{l}Desarrollo de código\end{tabular} &
+		\begin{tabular}[c]{@{}c@{}}AGV, PLT\end{tabular} \\ \hline
+		\begin{tabular}{l}Redacción de las respuestas\end{tabular} &
+		\begin{tabular}[c]{@{}c@{}}AGV, PLT\end{tabular} \\ \hline
 	\end{tabular}
 \end{table}
 
