--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -165,38 +165,47 @@
 
 \vspace{-2em}
 
-\section*{Contexto}\vspace{-1.5em}
+\section*{1. Contexto}\vspace{-1.5em}
 
 Explicar en qué contexto se ha recolectado la información. Explicar
 por qué el sitio web elegido proporciona dicha información
 
 Mercado inmobiliario, nueva legislación, contexto inflación...
 
-\vspace{-1.5em}\section*{Inspiración}\vspace{-1.5em}
+\section*{2. Título del dataset }\vspace{-1.5em}
 
-Explicar por qué es interesante este conjunto de datos y qué
-preguntas se pretenden responder. Es necesario comparar con los análisis
-anteriores presentados en agradecimientos
+\section*{3. Descripción del dataset }\vspace{-1.5em}
 
-\vspace{-1.5em}\section*{Agradecimientos}\vspace{-1.5em}
+Desarrollar una descripción breve del conjunto de
+datos que se ha extraído. Es necesario que esta descripción tenga sentido con
+el título elegido.
+
+\section*{4. Representación gráfica }\vspace{-1.5em}
+
+Dibujar un esquema o diagrama que identifique el
+dataset visualmente y el proyecto elegido
+
+\section*{5. Contenido }\vspace{-1.5em}
+
+Explicar los campos que incluye el dataset, el periodo de tiempo de los datos y cómo se han recogido
+
+\section*{6. Agradecimientos }\vspace{-1.5em}
 
 Presentar al propietario del conjunto de datos. Es necesario
 incluir citas de análisis anteriores o, en caso de no haberlas, justificar esta
 búsqueda con análisis similares. Justificar qué pasos se han seguido para
 actuar de acuerdo a los principios éticos y legales en el contexto del proyecto
 
-\vspace{-1.5em}\section*{\textit{Dataset} nombre del dataset}
+\section*{7. Inspiración }\vspace{-1.5em}
 
-\vspace{-1.5em}\subsection*{Descripción}\vspace{-1.5em}
+Explicar por qué es interesante este conjunto de datos y qué
+preguntas se pretenden responder. Es necesario comparar con los análisis
+anteriores presentados en agradecimientos
 
-Desarrollar una descripción breve del conjunto de
-datos que se ha extraído. Es necesario que esta descripción tenga sentido con
-el título elegido.
-
-\vspace{-1.5em}\subsection*{Licencia}\vspace{-1.5em}
+\section*{8. Licencia }\vspace{-1.5em}
 
 Seleccionar una de estas licencias para el dataset resultante y
-justificar el motivo de su selección:
+justificar el motivo de su selección: 
 ● Released Under CC0: Public Domain License.
 ● Released Under CC BY-NC-SA 4.0 License.
 ● Released Under CC BY-SA 4.0 License.
@@ -205,14 +214,19 @@ under Database Contents License.
 ● Other (specified above).
 ● Unknown License.
 
-\vspace{-1.5em}\subsection*{Contenido}\vspace{-1.5em}
+\section*{9. Código }\vspace{-1.5em}
 
-Explicar los campos que incluye el dataset, el periodo de tiempo de los datos y cómo se han recogido
+El \textbf{código} para el desarrollo de este proyecto se puede consultar al completo dentro de \textit{house-scraper} en: https://github.com/plazarotello/web-scraping
 
-\vspace{-1.5em}\subsection*{Representación gráfica}\vspace{-1.5em}
+\section*{10. Dataset }\vspace{-1.5em}
 
-Dibujar un esquema o diagrama que identifique el
-dataset visualmente y el proyecto elegido
+Blablablá
+
+\section*{11. Vídeo }\vspace{-1.5em}
+
+Blablablá
+
+\section*{ Tabla de contribuciones }\vspace{-1.5em}
 
 \begin{table}[h]
 	\centering
