--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -204,15 +204,15 @@ anteriores presentados en agradecimientos
 
 \section*{8. Licencia }\vspace{-1.5em}
 
-Seleccionar una de estas licencias para el dataset resultante y
-justificar el motivo de su selección: 
-● Released Under CC0: Public Domain License.
-● Released Under CC BY-NC-SA 4.0 License.
-● Released Under CC BY-SA 4.0 License.
-● Database released under Open Database License, individual contents
-under Database Contents License.
-● Other (specified above).
-● Unknown License.
+La licencia seleccionada es\textbf{ Atribución-NoComercial-CompartirIgual 4.0 Internacional (CC BY-NC-SA 4.0)}, debido a que es la que más se ajusta a las necesidades de este proyecto y las preferencias de las integrantes del equipo de trabajo por los siguientes motivos:
+
+● \textbf{Atribución}. Aunque el proyecto se puede compartir y adaptar, se debe atribuir a las creadoras del mismo, con un enlace a la licencia e indicando los cambios que se han realizado. El objetivo es que se reconozca el trabajo realizado en esta fase y las modificaciones respecto al original sin que, en ningún caso, se sugiera que este uso tenga el apoyo de las licenciantes.  
+
+● \textbf{NoComercial}. Este punto ha sido el más relevante a la hora de seleccionar la licencia porque no está autorizado el \textit{scrapeo} de los portales web de Idealista y Fotocasa. Por esta razón, este proyecto se ha desarrollado exclusivamente con fines académicos y, por tanto, queda terminantemente prohibido que se emplee el material con propósitos comerciales. 
+
+● \textbf{CompartirIgual}. Por el mismo motivo que no se permite una explotación comercial ni del proyecto ni de las modificaciones que se pudieran trabajar sobre él, cualquier contribución en el que esté involucrado debe tener la licencia CC BY-NC-SA 4.0. De esta manera, se evitará un uso no deseado de cualquier transformación.
+
+Como se puede observar, el mayor interés a la hora de seleccionar esta licencia, por tanto, es favorecer el flujo de conocimiento con fines exclusivamente académicos a la vez que preservar la voluntad de los propietarios de los datos originales. 
 
 \section*{9. Código }\vspace{-1.5em}
 
