--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -153,12 +153,12 @@
 	\begin{multicols}{2}
 		\begin{itemize}[topsep=0cm,partopsep=0cm,label={},wide]
 			\item \textbf{Título}: título
-			\item \textbf{Licencia}: licencia
+			\item \textbf{Licencia}: CC BY-NC-SA 4.0
 			\item \textbf{DOI}:
 			\columnbreak
 			\item \textbf{Número de campos}: numero
 			\item \textbf{Número de registros}: numero
-			\item \textbf{Fecha de extracción}: fecha
+			\item \textbf{Fecha de extracción}: primera semana de abril de 2022
 		\end{itemize}
 	\end{multicols}
 \end{framed}
@@ -173,6 +173,10 @@ por qué el sitio web elegido proporciona dicha información
 Mercado inmobiliario, nueva legislación, contexto inflación...
 
 \section*{2. Título del dataset }\vspace{-1.5em}
+
+Debido a la gran cantidad de conjuntos de datos existentes sobre la temática seleccionada, para el dataset resultante se ha optado por un título\textbf{ muy descriptivo} a la par que \textbf{concreto}, de modo que solo con él se pueda saber el contenido del mismo. Además, debido a la volatilidad del mercado inmobiliario, se ha decidido incluir el mes de extracción de los datos. Así, el título es el siguiente: 
+
+Housing for sale in the Salamanca and Villaverde district of Madrid in April 2022
 
 \section*{3. Descripción del dataset }\vspace{-1.5em}
 
