--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -167,16 +167,19 @@
 
 \section*{1. Contexto}\vspace{-1.5em}
 
-Explicar en qué contexto se ha recolectado la información. Explicar
-por qué el sitio web elegido proporciona dicha información
+La \textbf{Ley por el Derecho a la Vivienda} se aprobó en España por decreto el 1 de febrero de 2022 y, aunque esta normativa no regula los pisos en venta ya construidos en la actualidad de forma directa, sí que podría afectar a su precio en el futuro. Por ejemplo, si se limita el precio del alquiler, se puede dar el caso de que los inversores dejen de estar interesados en estos bienes y, por tanto, el precio final de venta variaría al cambiar la demanda. Por otro lado, el 30 por ciento de las nuevas promociones se reservará a Viviendas de Protección Oficial (VPO), lo que también puede alterar el precio de la vivienda libre.
 
-Mercado inmobiliario, nueva legislación, contexto inflación...
+Además de cambios en la normativa del mercado inmobiliario, la \textbf{invasión de Rusia a Ucrania} ha pillado por sorpresa a todos los sectores de la economía, disparando la \textbf{inflación} en España hasta un 9,8 por ciento, según indicador adelantado del IPC para el mes de marzo publicado por el Instituto Nacional de Estadística. Del mismo modo, el Banco de España ha recortado sus \textbf{previsiones de crecimiento} para el país y ha doblado su previsión anual de inflación al 7,5 por ciento, según los datos publicados el 5 de abril de 2022.
+
+En este contexto de cambios económicos y normativos, el mercado inmobiliario en España se ha caracterizado desde hace décadas por las \textbf{diferencias en el precio }de la vivienda, tanto según las zonas del territorio nacional como dentro de las propias localidades. 
+
+Teniendo presente esta situación, y no existiendo un registro público de viviendas en venta actualizado, se ha decidido obtener la información de las viviendas en venta de los portales inmobiliarios de \textbf{Idealista} y \textbf{Fotocasa}. Esta decisión se fundamenta en que son los\textbf{ más visitados} en España, según los datos de febrero de \textit{similarweb}, que publica las métricas oficiales de los sitios web de todo el mundo. Además, esta clasificación de visitas se mantiene en los últimos años, por lo que no se prevé que varíe en un corto periodo de tiempo. Asimismo, es interesante que estos portales trabajan tanto con \textbf{inmobiliarias} como con \textbf{particulares} que desean vender inmuebles, por lo que proporcionan una información amplia sobre el tema que nos ocupa en este proyecto. 
 
 \section*{2. Título del dataset }\vspace{-1.5em}
 
 Debido a la gran cantidad de conjuntos de datos existentes sobre la temática seleccionada, para el dataset resultante se ha optado por un título\textbf{ muy descriptivo} a la par que \textbf{concreto}, de modo que solo con él se pueda saber el contenido del mismo. Además, debido a la volatilidad del mercado inmobiliario, se ha decidido incluir el mes de extracción de los datos. Así, el título es el siguiente: 
 
-Housing for sale in the Salamanca and Villaverde district of Madrid in April 2022
+\textbf{Houses for sale in the Salamanca and Villaverde district of Madrid in April 2022}
 
 \section*{3. Descripción del dataset }\vspace{-1.5em}
 
