reviewed some stuff in the report

--- a/report/agomezvarela_plazarotello-TIP_PRA1.tex
+++ b/report/agomezvarela_plazarotello-TIP_PRA1.tex
@@ -150,14 +150,14 @@
 
 \vspace{-2em}
 \begin{framed}
+	\textbf{\underline{Houses for sale in the Salamanca and Villaverde district of Madrid in April 2022}}
 	\begin{multicols}{2}
 		\begin{itemize}[topsep=0cm,partopsep=0cm,label={},wide]
-			\item \textbf{Título}: Houses for sale in the Salamanca and Villaverde district of Madrid in April 2022
 			\item \textbf{Licencia}: CC BY-NC-SA 4.0
-			\item \textbf{DOI}:
-			\columnbreak
-			\item \textbf{Número de campos}: numero
+			\item \textbf{Número de campos}: 15
 			\item \textbf{Número de registros}: numero
+			\columnbreak
+			\item \textbf{DOI}:
 			\item \textbf{Fecha de extracción}: primera semana de abril de 2022
 		\end{itemize}
 	\end{multicols}
@@ -165,40 +165,38 @@
 
 \vspace{-2em}
 
-\section*{1. Contexto}\vspace{-1.5em}
+\section{Contexto}\vspace{-1.5em}
 
-La \textbf{Ley por el Derecho a la Vivienda} se aprobó en España por decreto el 1 de febrero de 2022 y, aunque esta normativa no regula los pisos en venta ya construidos en la actualidad de forma directa, sí que podría afectar a su precio en el futuro. Por ejemplo, si se limita el precio del alquiler, se puede dar el caso de que los inversores dejen de estar interesados en estos bienes y, por tanto, el precio final de venta variaría al cambiar la demanda. Por otro lado, el 30 por ciento de las nuevas promociones se reservará a Viviendas de Protección Oficial (VPO), lo que también puede alterar el precio de la vivienda libre.
+La \textbf{Ley por el Derecho a la Vivienda} se aprobó en España por decreto el 1 de febrero de 2022 y, aunque esta normativa no regula los pisos en venta ya construidos en la actualidad de forma directa, sí que podría afectar a su precio en el futuro. Por ejemplo, si se limita el precio del alquiler, se puede dar el caso de que los inversores dejen de estar interesados en estos bienes y por tanto, el precio final de venta variaría al cambiar la demanda. Por otro lado, el 30\% de las nuevas promociones se reservará a Viviendas de Protección Oficial (VPO), lo que también puede alterar el precio de la vivienda libre.
 
-Además de cambios en la normativa del mercado inmobiliario, la \textbf{invasión de Rusia a Ucrania} ha pillado por sorpresa a todos los sectores de la economía, disparando la \textbf{inflación} en España hasta un 9,8 por ciento, según indicador adelantado del IPC para el mes de marzo publicado por el Instituto Nacional de Estadística. Del mismo modo, el Banco de España ha recortado sus \textbf{previsiones de crecimiento} para el país y ha doblado su previsión anual de inflación al 7,5 por ciento, según los datos publicados el 5 de abril de 2022.
+Además de cambios en la normativa del mercado inmobiliario, la \textbf{invasión de Rusia a Ucrania} ha pillado por sorpresa a todos los sectores de la economía, disparando la \textbf{inflación} en España hasta un 9,8\%, según indicador adelantado del IPC para el mes de marzo publicado por el Instituto Nacional de Estadística (INE). Del mismo modo, el Banco de España ha recortado sus \textbf{previsiones de crecimiento} para el país y ha doblado su previsión anual de inflación al 7,5\%, según los datos publicados el 5 de abril de 2022.
 
-En este contexto de cambios económicos y normativos, el mercado inmobiliario en España se ha caracterizado desde hace décadas por las \textbf{diferencias en el precio }de la vivienda, tanto según las zonas del territorio nacional como dentro de las propias localidades. 
+Asimismo, cabe destacar que el mercado inmobiliario en España se ha caracterizado desde hace décadas por las \textbf{diferencias en el precio} de la vivienda, tanto según las zonas del territorio nacional como dentro de las propias localidades. 
 
-Teniendo presente esta situación, y no existiendo un registro público de viviendas en venta actualizado, se ha decidido obtener la información de las viviendas en venta de los portales inmobiliarios de \textbf{Idealista} y \textbf{Fotocasa}. Esta decisión se fundamenta en que son los\textbf{ más visitados} en España, según los datos de febrero de \textit{similarweb}, que publica las métricas oficiales de los sitios web de todo el mundo. Además, esta clasificación de visitas se mantiene en los últimos años, por lo que no se prevé que varíe en un corto periodo de tiempo. Asimismo, es interesante que estos portales trabajan tanto con \textbf{inmobiliarias} como con \textbf{particulares} que desean vender inmuebles, por lo que proporcionan una información amplia sobre el tema que nos ocupa en este proyecto. 
+Teniendo presente esta situación de cambios económicos y normativos, y no existiendo un registro público de viviendas en venta actualizado, se ha decidido obtener la información de las viviendas en venta de los portales inmobiliarios de \textbf{Idealista} y \textbf{Fotocasa}. Esta decisión se fundamenta en que son los portales \textbf{más visitados} en España, según los datos de febrero de \href{https://www.similarweb.com/top-websites/spain/category/business-and-consumer-services/real-estate/}{\textit{similarweb}}, que publica las métricas oficiales de los sitios web de todo el mundo. Además, esta clasificación de visitas se mantiene en los últimos años, por lo que no se prevé que varíe en un corto periodo de tiempo. Asimismo, es interesante que estos portales trabajan tanto con \textbf{inmobiliarias} como con \textbf{particulares} que desean vender inmuebles, por lo que proporcionan una información amplia sobre el tema de interés del proyecto.
 
-\section*{2. Título del dataset }\vspace{-1.5em}
+\vspace{-1.5em}\section{Houses for sale in the Salamanca and Villaverde district of Madrid in April 2022}\vspace{-1.5em}
 
-Debido a la gran cantidad de conjuntos de datos existentes sobre la temática seleccionada, para el dataset resultante se ha optado por un título\textbf{ muy descriptivo} a la par que \textbf{concreto}, de modo que solo con él se pueda saber el contenido del mismo. Además, debido a la volatilidad del mercado inmobiliario, se ha decidido incluir el mes de extracción de los datos. Así, el título es el siguiente: 
+Debido a la gran cantidad de conjuntos de datos existentes sobre la temática seleccionada, para el \textit{dataset} resultante se ha optado por un título \textbf{muy descriptivo} a la par que \textbf{concreto}, de modo que solo con él se pueda saber el contenido del mismo. Además, debido a la volatilidad del mercado inmobiliario, se ha decidido incluir el mes de extracción de los datos.
 
-\textbf{Houses for sale in the Salamanca and Villaverde district of Madrid in April 2022}
-
-\section*{3. Descripción del dataset }\vspace{-1.5em}
+\vspace{-1.5em}\section{Descripción del \textit{dataset}}\vspace{-1.5em}
 
 Desarrollar una descripción breve del conjunto de
 datos que se ha extraído. Es necesario que esta descripción tenga sentido con
 el título elegido.
 
-\section*{4. Representación gráfica }\vspace{-1.5em}
+\vspace{-1.5em}\section{Representación gráfica}\vspace{-1.5em}
 
 Dibujar un esquema o diagrama que identifique el
 dataset visualmente y el proyecto elegido
 
-\section*{5. Contenido }\vspace{-1.5em}
+\vspace{-1.5em}\section{Contenido}\vspace{-1.5em}
 
 Explicar los campos que incluye el dataset, el periodo de tiempo de los datos y cómo se han recogido
 
-\section*{6. Agradecimientos }\vspace{-1.5em}
+\vspace{-1.5em}\section{Agradecimientos }\vspace{-1.5em}
 
-A continuación se abordará el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y la necesidad de diferenciar claramente entre ellos. 
+A continuación se aborda el apartado de agradecimientos divido en tres bloques debido a la complejidad del proyecto planteado y la necesidad de diferenciar claramente entre ellos.
 
 \underline{Propietarios de los datos}
 
